[package]
name = "deno-sass"
version = "0.0.1"
authors = ["Divy Srivastava <dj.srivastava23@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
deno_core = "0.47.1"
sass-rs = { path = "./sass_rs/" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.4"
